<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ssru.winitawilawan.ssrushopbook.SignUpActivity"
    android:background="@drawable/bg400">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/textView"
        android:textIsSelectable="false"
        android:textSize="@dimen/h1"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:textColor="@color/text"
        android:onClick="clickSingUpSign" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/button3"
        android:layout_margin="15dp"
        android:background="#82ffffff"
        android:padding="15dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/textView2"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:textColor="@color/text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_weight="2"
                android:textColor="@color/text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sur"
                android:id="@+id/textView3"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:textColor="@color/text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_weight="2"
                android:textColor="@color/text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:id="@+id/textView4"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:textColor="@color/text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_weight="2"
                android:textColor="@color/text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:id="@+id/textView5"
                android:textSize="@dimen/h2"
                android:layout_weight="1"
                android:textColor="@color/text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:layout_weight="2"
                android:textColor="@color/text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promote"
            android:id="@+id/textView6"
            android:textSize="@dimen/h2"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:textColor="@color/text" />
    </LinearLayout>
</RelativeLayout>
